cmake_minimum_required(VERSION 3.13)
if (DEFINED ENV{PICO_SDK_PATH})
  include("$ENV{PICO_SDK_PATH}/pico_sdk_init.cmake")
else ()
  include("../pico-sdk/pico_sdk_init.cmake")
endif()
project(project C CXX ASM)
add_compile_options(-Wall -Wextra)
pico_sdk_init()
add_subdirectory(../pololu_3pi_2040_robot pololu_3pi_2040_robot)

add_executable(test_pololu test_pololu.c)
pico_enable_stdio_usb(test_pololu 1)
pico_enable_stdio_uart(test_pololu 0)
pico_add_extra_outputs(test_pololu)
target_link_libraries(test_pololu pololu_3pi_2040_robot)
